# uc-intg-cctv

./: Dockerfile  README.md  docker-compose.yml  docker-entry.sh  driver.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml
uc_intg_cctv/: __init__.py  camera_select.py  client.py  config.py  driver.py  media_player.py  setup.py
